continuação do projeto

--- a/index.html
+++ b/index.html
@@ -21,17 +21,53 @@
     </header>
     <section>
         <div class="list">
-            <div class="item">
+            <div class="item active">
                 <div class="carimg">
                     <img src="Imagens/carroprata.png" alt="carro prata">
                 </div>
                 <div class="content">
                     <p class="information">
-                        Único dono <br> Ano 2022 <br> 52km
+                        Único dono! <br> Ano 2022 <br> 52km
                     </p>
-                    <h2 class="nome">Ferrari</h2>
+                    <h2 class="nome">911 Turbo</h2>
                     <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur odio
                         iusto, delectus sequi vel optio soluta, itaque totam molestiae, tempore nulla cupiditate.</p>
+                    <button class="info">
+                        Saiba Mais
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="list">
+            <div class="item">
+                <div class="carimg">
+                    <img src="Imagens/carroamarelo.png" alt="carro amarelo">
+                </div>
+                <div class="content">
+                    <p class="information">
+                        Seja o primeiro dono! <br> Ano 2024 <br> 0km
+                    </p>
+                    <h2 class="nome">Lamborghini</h2>
+                    <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur odio
+                    iusto, delectus sequi vel optio soluta, itaque totam molestiae, tempore nulla cupiditate. Lorem ipsum dolor sit amet.</p>
+                    <button class="info">
+                        Saiba Mais
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="list">
+            <div class="item">
+                <div class="carimg">
+                    <img src="Imagens/carrovermelho.png" alt="carro vermelho">
+                </div>
+                <div class="content">
+                    <p class="information">
+                        Conversível! <br> Ano 2020 <br> 35km
+                    </p>
+                    <h2 class="nome"><Table>Ferrari</Table></h2>
+                    <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur odio
+                    iusto, delectus sequi vel optio soluta, itaque totam molestiae, tempore nulla cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
                     <button class="info">
                         Saiba Mais
                     </button>
